# mobileGF2logger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle  gradle.properties  settings.gradle
.github/: dependabot.yml
.github/workflows/: android.yml  codeql.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gf2capture.c
app/src/main/java/dev/gf2log/app/: MainActivity.kt  OptionsActivity.kt  PacketHistoryActivity.kt
app/src/main/java/dev/gf2log/app/capture/: CaptureStatus.kt  CaptureVpnService.kt  GuildMembersCsvWriter.kt  NativeCaptureBridge.kt
app/src/main/java/dev/gf2log/app/history/: CaptureHistoryStore.kt  SavedHistoryStore.kt
app/src/main/java/dev/gf2log/app/settings/: PayloadHistoryPreferences.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_settings.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/dev/gf2log/app/capture/: CaptureStatusTest.kt  GuildMembersCsvWriterTest.kt
docs/: ARCHITECTURE.md  GUILD_CAPTURE.md  PLATOON_CAPTURE.md
protocol/: build.gradle
protocol/src/main/java/dev/gf2log/protocol/: Gfl2PayloadDecoder.kt  Gfl2StreamParser.kt  GuildMembersCsv.kt  ParsedPacketTableParser.kt  ParsedPayloadTextFormatter.kt  PayloadCatalog.kt  ProtocolException.kt
protocol/src/test/java/dev/gf2log/protocol/: Gfl2StreamParserTest.kt  GuildMembersCsvTest.kt  ParsedPacketTableParserTest.kt  ParsedPayloadTextFormatterTest.kt  PayloadCatalogTest.kt
(+6 files in other folders)
